--- a/max_temperature.html
+++ b/max_temperature.html
@@ -17,17 +17,17 @@
     <div class="container">
       <a class="title" id="pageTitle" href="index.html">Latitude</a>
 
-      <div class="nav myNavBar">
-        <span class="dropdown"><a class="dropdown-toggle navItem" data-toggle="dropdown" href="#">Plots<span class="caret"></span></a>
+      <div class="myNavBar">
+        <span class="dropdown navItem"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Plots<span class="caret"></span></a>
           <ul class="dropdown-menu nestedItem">
-            <li><a href="#"><span>Max Temperature</span></a></li>
-            <li><a href="#"><span>Humidity</span></a></li>
-            <li><a href="#"><span>Cloudiness</span></a></li>
-            <li><a href="#"><span>Wind Speed</span></a></li>
+            <li><a href="#">City Latitude vs Temperature</a></li>
+            <li><a href="#">City Latitude vs Humidity</a></li>
+            <li><a href="#">City Latitude vs Cloudiness</a></li>
+            <li><a href="#">City Latitude vs WindSpeed</a></li>
           </ul>          
         </span>
-        <span><a class="navItem" href="comparison.html">Comparison</a></span>
-        <span><a class="navItem" href="#">Data</a></span>
+        <span class="navItem"><a href="#">Comparison</a></span>
+        <span class="navItem"><a href="#">Data</a></span>
       </div>
 
     </div>
@@ -52,10 +52,10 @@
           <div class="right">
             <p class="title title2"><span>Visualizations</span></p>
             <div>
-              <img src="assets/images/Fig1.png" alt="City Latitude vs. Max Temperature(01/05/17)" height="140" width="140">
-              <img src="assets/images/Fig2.png" alt="City Latitude vs. Max Huminity(01/05/17)" height="140" width="140">
-              <img src="assets/images/Fig3.png" alt="City Latitude vs. Max Cloudiness(01/05/17)" height="140" width="140">
-              <img src="assets/images/Fig4.png" alt="City Latitude vs. Max Wind Speed(01/05/17)" height="140" width="140">
+              <img src="assets/images/Fig1.png" alt="City Latitude vs. Max Temperature(01/05/17)" height="115" width="115">
+              <img src="assets/images/Fig2.png" alt="City Latitude vs. Max Huminity(01/05/17)" height="115" width="115">
+              <img src="assets/images/Fig3.png" alt="City Latitude vs. Max Cloudiness(01/05/17)" height="115" width="115">
+              <img src="assets/images/Fig4.png" alt="City Latitude vs. Max Wind Speed(01/05/17)" height="115" width="115">
             </div>
           </div>
         </div>
