add comparison.html, visualizations.html

--- a/comparison.html
+++ b/comparison.html
@@ -20,7 +20,7 @@
        <div class="nav myNavBar">
         <span class="dropdown"><a class="dropdown-toggle navItem" data-toggle="dropdown" href="#">Plots<span class="caret"></span></a>
           <ul class="dropdown-menu nestedItem">
-            <li><a href="#"><span>Max Temperature</span></a></li>
+            <li><a href="visualizations.html"><span>Max Temperature</span></a></li>
             <li><a href="#"><span>Humidity</span></a></li>
             <li><a href="#"><span>Cloudiness</span></a></li>
             <li><a href="#"><span>Wind Speed</span></a></li>
@@ -36,36 +36,41 @@
 
 
   <section>
+    
     <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="main">
+      <div class="main">
+
+        <div class="row">
+          <div class="col-md-12">
             <p class="title title1">
               <span>Comparison: Latitude vs. X</span>
             </p>
 
-            <div class="row">
-              <div class="col-md-12 addMargin">Click any plot to get an in-depth analysis</div>
-              <div class="col-md-6 center">
-                <p class="title3">vs. Max Temperature</p>
-                <img src="assets/images/Fig1.png" alt="City Latitude vs. Max Temperature(01/05/17)" height="350" width="450">
-              </div>
+            <p class="title3">
+              <span>Click any plot to get an in-depth analysis</span>
+            </p>
+          </div>
+        </div>
 
-              <div class="col-md-6 center">
-                <p class="title3">vs. Max Humigity</p>
-                <img src="assets/images/Fig2.png" alt="City Latitude vs. Huminity(01/05/17)" height="350" width="450">
-              </div>
+        <div class="row graphes">
+          <div class="col-md-6 center">
+            <p>vs. Max Temperature</p>
+            <img src="assets/images/Fig1.png" alt="City Latitude vs. Max Temperature(01/05/17)">
+          </div>
 
-              <div class="col-md-6 center">
-                <p class="title3">vs. Cloudiness</p>
-                <img src="assets/images/Fig3.png" alt="City Latitude vs. Cloudiness(01/05/17)" height="350" width="450">
-              </div>
+          <div class="col-md-6 center">
+            <p>vs. Max Humigity</p>
+            <img src="assets/images/Fig2.png" alt="City Latitude vs. Huminity(01/05/17)">
+          </div>
 
-              <div class="col-md-6 center">
-                <p class="title3">vs. Wind Speed</p>
-                <img src="assets/images/Fig4.png" alt="City Latitude vs. Wind Speed(01/05/17)" height="350" width="450">
-              </div>
-            </div>
+          <div class="col-md-6 center">
+            <p>vs. Cloudiness</p>
+            <img src="assets/images/Fig3.png" alt="City Latitude vs. Cloudiness(01/05/17)">
+          </div>
+
+          <div class="col-md-6 center">
+            <p>vs. Wind Speed</p>
+            <img src="assets/images/Fig4.png" alt="City Latitude vs. Wind Speed(01/05/17)">
           </div>
         </div>
       </div>
