--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="nav myNavBar">
         <span class="dropdown"><a class="dropdown-toggle navItem" data-toggle="dropdown" href="#">Plots<span class="caret"></span></a>
           <ul class="dropdown-menu nestedItem">
-            <li><a href="#"><span>Max Temperature</span></a></li>
+            <li><a href="visualizations.html"><span>Max Temperature</span></a></li>
             <li><a href="#"><span>Humidity</span></a></li>
             <li><a href="#"><span>Cloudiness</span></a></li>
             <li><a href="#"><span>Wind Speed</span></a></li>
@@ -36,6 +36,7 @@
   <section>
     <div class="container">
       <div class="row">
+
         <div class="col-md-8">
           <div class="left">
             <p class="title title1">
@@ -52,13 +53,14 @@
           <div class="right">
             <p class="title title2"><span>Visualizations</span></p>
             <div>
-              <img src="assets/images/Fig1.png" alt="City Latitude vs. Max Temperature(01/05/17)" height="140" width="140">
-              <img src="assets/images/Fig2.png" alt="City Latitude vs. Max Huminity(01/05/17)" height="140" width="140">
-              <img src="assets/images/Fig3.png" alt="City Latitude vs. Max Cloudiness(01/05/17)" height="140" width="140">
-              <img src="assets/images/Fig4.png" alt="City Latitude vs. Max Wind Speed(01/05/17)" height="140" width="140">
+              <img src="assets/images/Fig1.png" alt="City Latitude vs. Max Temperature(01/05/17)" class="rightImg">
+              <img src="assets/images/Fig2.png" alt="City Latitude vs. Max Huminity(01/05/17)" class="rightImg">
+              <img src="assets/images/Fig3.png" alt="City Latitude vs. Max Cloudiness(01/05/17)" class="rightImg">
+              <img src="assets/images/Fig4.png" alt="City Latitude vs. Max Wind Speed(01/05/17)" class="rightImg">
             </div>
           </div>
         </div>
+        
       </div>
     </div>
   </section>
