--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bashboard | Main</title>
+  <title>Bashboard | Home</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -20,10 +20,10 @@
       <div class="nav myNavBar">
         <span class="dropdown"><a class="dropdown-toggle navItem" data-toggle="dropdown" href="#">Plots<span class="caret"></span></a>
           <ul class="dropdown-menu nestedItem">
-            <li><a href="visualizations.html"><span>Max Temperature</span></a></li>
-            <li><a href="#"><span>Humidity</span></a></li>
-            <li><a href="#"><span>Cloudiness</span></a></li>
-            <li><a href="#"><span>Wind Speed</span></a></li>
+            <li><a href="max_temperature.html"><span>Max Temperature</span></a></li>
+            <li><a href="humidity.html"><span>Humidity</span></a></li>
+            <li><a href="cloudiness.html"><span>Cloudiness</span></a></li>
+            <li><a href="wind_speed.html"><span>Wind Speed</span></a></li>
           </ul>          
         </span>
         <span><a class="navItem" href="comparison.html">Comparison</a></span>
@@ -54,19 +54,19 @@
             <p class="title title2"><span>Visualizations</span></p>
             <div>
               <img src="assets/images/Fig1.png" alt="City Latitude vs. Max Temperature(01/05/17)" class="rightImg">
-              <img src="assets/images/Fig2.png" alt="City Latitude vs. Max Huminity(01/05/17)" class="rightImg">
+              <img src="assets/images/Fig2.png" alt="City Latitude vs. Max Humidity(01/05/17)" class="rightImg">
               <img src="assets/images/Fig3.png" alt="City Latitude vs. Max Cloudiness(01/05/17)" class="rightImg">
               <img src="assets/images/Fig4.png" alt="City Latitude vs. Max Wind Speed(01/05/17)" class="rightImg">
             </div>
           </div>
         </div>
-        
+
       </div>
     </div>
   </section>
 
   <footer>
-    <p>&#169; Copyright Christie Lafrance 2018</p>
+    <p class="title">&#169; Copyright Christie Lafrance 2018</p>
   </footer>
 
 </body>
