--- a/wind_speed.html
+++ b/wind_speed.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bashboard | Plots_MaxTemperature</title>
+  <title>Bashboard | Plots-WindSpeed</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -26,7 +26,7 @@
           </ul>          
         </span>
         <span><a class="navItem" href="comparison.html">Comparison</a></span>
-        <span><a class="navItem" href="weather_data.html">Data</a></span>
+        <span><a class="navItem" href="#">Data</a></span>
       </div>
 
     </div>
@@ -39,10 +39,10 @@
         <div class="col-md-8">
           <div class="left">
             <p class="title title1">
-              <span>Max Temperature</span>
+              <span>Wind Speed</span>
             </p>
-            <img class="largeImg" src="assets/images/Fig1.png" alt="City Latitude vs. Max Temperature(01/05/17)">
-            <p><p>As expected, the weather becomes significantly warmer as one approachs the equator(0 Deg Latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of the year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data was gathered.</p></p><br>
+            <img class="largeImg" src="assets/images/Fig4.png" alt="City Latitude vs. Wind Speed(01/05/17)">
+            <p>Tincidunt sem donec integer etiam tempus viverra pellentesque eros bibendum dictum quisque malesuada, tristique odio enim adipiscing id dui suscipit ante malesuada est metus, magna eget auctor netus porttitor nulla dapibus consectetur mattis turpis aenean.</p><br>
           </div>
         </div>
 
@@ -50,10 +50,10 @@
           <div class="right">
             <p class="title title2"><span>Visualizations</span></p>
             <div>
-              <a href="max_temperature.html"><img src="assets/images/Fig1.png" alt="City Latitude vs. Max Temperature(01/05/17)" class="rightImg" id="temp"></a>
-              <a href="humidity.html"><img src="assets/images/Fig2.png" alt="City Latitude vs. Max Huminity(01/05/17)" class="rightImg"></a>
+              <a href="max_temperature.html"><img src="assets/images/Fig1.png" alt="City Latitude vs. Max Temperature(01/05/17)" class="rightImg"></a>
+              <a href="humidity.html"><img src="assets/images/Fig2.png" alt="City Latitude vs. Max Humidity(01/05/17)" class="rightImg"></a>
               <a href="cloudiness.html"><img src="assets/images/Fig3.png" alt="City Latitude vs. Max Cloudiness(01/05/17)" class="rightImg"></a>
-              <a href="wind_speed.html"><img src="assets/images/Fig4.png" alt="City Latitude vs. Max Wind Speed(01/05/17)" class="rightImg"></a>
+              <a href="wind_speed.html"><img src="assets/images/Fig4.png" alt="City Latitude vs. Max Wind Speed(01/05/17)" class="rightImg" id="wind_speed"></a>
             </div>
           </div>
         </div>
