add statement for visualization pages

--- a/humidity.html
+++ b/humidity.html
@@ -42,7 +42,7 @@
               <span>Humidity</span>
             </p>
             <img class="largeImg" src="assets/images/Fig2.png" alt="City Latitude vs. Max humidity(01/05/17)">
-            <p>Tincidunt sem donec integer etiam tempus viverra pellentesque eros bibendum dictum quisque malesuada, tristique odio enim adipiscing id dui suscipit ante malesuada est metus, magna eget auctor netus porttitor nulla dapibus consectetur mattis turpis aenean.</p><br>
+            <p>There is no strong relationship between latitude and humidity. However, there is a weak indication that in general, southern hemisphere is a little more humid than the northern hemisphere. It is interesting to see that most cities humidity are between 60% to 100%.</p><br>
           </div>
         </div>
 
