--- a/wind_speed.html
+++ b/wind_speed.html
@@ -42,7 +42,7 @@
               <span>Wind Speed</span>
             </p>
             <img class="largeImg" src="assets/images/Fig4.png" alt="City Latitude vs. Wind Speed(01/05/17)">
-            <p>Tincidunt sem donec integer etiam tempus viverra pellentesque eros bibendum dictum quisque malesuada, tristique odio enim adipiscing id dui suscipit ante malesuada est metus, magna eget auctor netus porttitor nulla dapibus consectetur mattis turpis aenean.</p><br>
+            <p>There is no strong relationship between latitude and wind speed. However, in northern hemispheres there is a flurry of cities with over 20 mph of wind.</p><br>
           </div>
         </div>
 
