--- a/cloudiness.html
+++ b/cloudiness.html
@@ -42,7 +42,7 @@
               <span>Cloudiness</span>
             </p>
             <img class="largeImg" src="assets/images/Fig3.png" alt="City Latitude vs. Cloudiness(01/05/17)">
-            <p>Tincidunt nisl sollicitudin ligula nec praesent vehicula justo congue, dolor pulvinar massa felis porttitor eget suscipit, malesuada fames luctus dui sagittis vitae aptent diam pretium suspendisse diam cubilia lacus ultrices ad malesuada.</p><br>
+            <p>There is no strong relationship between latitude and cloudiness. However, it is interesting to see that a strong band of cities sits at 0, 80, and 100% cloudiness.</p><br>
           </div>
         </div>
 
